--- a/index.html
+++ b/index.html
@@ -22,37 +22,32 @@
         margin: 0;
       }
       table {
-        border-collapse: collapse;
-        width: 100%;
-        max-width: 100%;
+        width: 320px;
         padding: 10px;
-        margin: auto;
-        position: relative;
-        top: 800px;
+        margin: 0 auto;
       }
       tr {
         width: 100%;
       }
 
       td {
-        padding: 10px;
-        width: 25%;
+        width: 75px;
+        height: 70px;
+        margin: 40px;
         text-align: center;
       }
 
       input[type="button"],
       button {
-        width: 25%;
+        width: 100%;
+        height: 100%;
         border-radius: 50%;
-        height: 200px;
         border: none;
-        font-size: 50px;
+        font-size: 25px;
         color: white;
-        padding: 100px;
+        padding: 20px;
         text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: centers;
+        display: inline-block;
       }
 
       input#display {
@@ -136,7 +131,7 @@
           <td><input type="button" value="2" class="brown num" /></td>
           <td><input type="button" value="3" class="brown num" /></td>
 
-          <td><input type="button" value="%" class="brown num" /></td>
+          <td><input type="button" value="%" class="orange num" /></td>
         </tr>
         <tr>
           <td><input type="button" value="0" class="brown num" /></td>
