--- a/index.html
+++ b/index.html
@@ -31,12 +31,20 @@
       }
 
       td {
-        width: 75px;
+        width: 70px;
         height: 70px;
         margin: 40px;
         text-align: center;
       }
-
+      @media screen and (max-width: 600px) {
+        table {
+          max-width: 600px;
+        }
+        td {
+          max-width: 150px;
+          max-height: 150px;
+        }
+      }
       input[type="button"],
       button {
         width: 100%;
@@ -52,8 +60,7 @@
 
       input#display {
         width: 100%;
-        margin-right: 100px;
-        height: 150px;
+        height: 100px;
         border: none;
         text-align: right;
         background-color: black;
@@ -63,8 +70,7 @@
       }
       input#result {
         width: 100%;
-        margin-right: 100px;
-        height: 150px;
+        height: 100px;
         border: none;
         text-align: right;
         background-color: #000;
