--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Simple Calculator using html and css</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale="1.0" "/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -43,16 +43,16 @@
         height: 100%;
         border-radius: 50%;
         border: none;
-        font-size: 25px;
+        font-size: 20px;
         color: white;
         padding: 20px;
         text-align: center;
-        display: inline-block;
       }
 
       input#display {
         width: 100%;
-        height: 100px;
+        margin-right: 100px;
+        height: 150px;
         border: none;
         text-align: right;
         background-color: black;
@@ -62,7 +62,8 @@
       }
       input#result {
         width: 100%;
-        height: 100px;
+        margin-right: 100px;
+        height: 150px;
         border: none;
         text-align: right;
         background-color: #000;
@@ -129,7 +130,7 @@
           <td><input type="button" value="2" class="brown num" /></td>
           <td><input type="button" value="3" class="brown num" /></td>
 
-          <td><input type="button" value="%" class="orange num" /></td>
+          <td><input type="button" value="%" class="brown num" /></td>
         </tr>
         <tr>
           <td><input type="button" value="0" class="brown num" /></td>
