--- a/index.html
+++ b/index.html
@@ -1,174 +1,380 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>Simple Calculator using html and css</title>
-    <meta charset="utf-8" />
+    <title>KnowledgeHub Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="author" name="sheriff baba" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="index.css" type="text/css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
     <script src="jquery-3.6.1.min.js" type="text/javascript"></script>
-
-    <style>
-      * {
-        padding: 0px;
-        margin: 0px;
-        box-sizing: border-box;
-      }
-      body {
-        background-color: #000;
-        font-family: Arial;
-        margin: 0;
-      }
-      table {
-        width: 100vw;
-        height: 100vh;
-        padding: 10px;
-        margin: 0 auto;
-      }
-      tr {
-        width: 100%;
-      }
-
-      td {
-        width: 70px;
-        height: 70px;
-        margin: 40px;
-        text-align: center;
-      }
-
-      input[type="button"],
-      button {
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        border: none;
-        font-size: 20px;
-        color: white;
-        padding: 20px;
-        text-align: center;
-      }
-
-      input#display {
-        width: 100%;
-        margin-right: 100px;
-        height: 150px;
-        border: none;
-        text-align: right;
-        background-color: black;
-        color: white;
-        font-size: 50px;
-        outline: none;
-      }
-      input#result {
-        width: 100%;
-        margin-right: 100px;
-        height: 150px;
-        border: none;
-        text-align: right;
-        background-color: #000;
-        font-size: 30px;
-        color: #fff;
-        outline: none;
-      }
-      .brown {
-        background-color: dimgray;
-      }
-      .orange {
-        background-color: orange;
-      }
-    </style>
   </head>
   <body>
-    <table>
-      <tbody>
-        <tr>
-          <td colspan="4">
+    <!-- navigation -->
+    <nav>
+      <div class="logo_container">
+        <img src="logo3.png" alt="KnowledgeHub logo" />
+        <h3 id="hub1">knowledge</h3>
+        <h3 id="hub2">hub</h3>
+      </div>
+      <div class="navigation">
+        <ul>
+          <i class="fas fa-times" id="menu_close"></i>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Courses</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <i class="fas fa-navicon" id="menu_btn"></i>
+      </div>
+    </nav>
+    <!-- Section -->
+    <section id="home">
+      <h2>Enhance Your Future With KnowledgeHub</h2>
+      <p>
+        <q>
+          Embark on an exciting journey of discovery and unlock the limitless
+          possibilities of knowledge as we empower you to engage, ignite your
+          curiosity, and transform your learning experience into a captivating
+          and enriching adventure, where you can explore new horizons, dive into
+          fascinating subjects, unleash your full potential, and master the
+          skills that will propel you towards a future filled with success and
+          innovations.</q
+        >
+      </p>
+      <div class="btn">
+        <a href="#" class="blue">Learn More</a>
+        <a href="#" class="yellow">Visit Courses</a>
+      </div>
+    </section>
+
+    <!-- features -->
+    <section id="features">
+      <h1>Awesome Features</h1>
+      <p>Replenish man have thing gathering lighs yielding shall you</p>
+      <div class="fea-base">
+        <div class="fea-box">
+          <i class="fas fa-graduation-cap"></i>
+          <h3>Scholarship Facility</h3>
+          <p>
+            one make creepeth, man bearing theira firmanent won't make heaven
+          </p>
+        </div>
+        <div class="fea-box">
+          <i class="fas fa-certificate"></i>
+          <h3>Dell Online Courses</h3>
+          <p>
+            one make creepeth, man bearing theira firmanent won't make heaven
+          </p>
+        </div>
+        <div class="fea-box">
+          <i class="fas fa-award"></i>
+          <h3>Global Certification</h3>
+          <p>
+            one make creepeth, man bearing theira firmanent won't make heaven
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Courses -->
+    <section id="course">
+      <h1>Our Popular Courses</h1>
+      <p>Replenish man have thing gathering lighs yielding shall you</p>
+      <!-- The course box -->
+      <div class="course-box">
+        <!-- Courses div -->
+        <div class="courses">
+          <img src="JavaScript.jpeg" alt="javascipt image" />
+          <!-- details div -->
+          <div class="details">
+            <span>Updated 05/06/2023</span>
+            <h6>Javascipt Beginners Course</h6>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>(239)</span>
+            </div>
+          </div>
+          <div class="cost">$49.9</div>
+        </div>
+        <div class="courses">
+          <img src="html and css.jpeg" alt="html&css image" />
+          <!-- details div -->
+          <div class="details">
+            <span>Updated 05/06/2023</span>
+            <h6>HTML AND CSS Beginners Course</h6>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>(239)</span>
+            </div>
+          </div>
+          <div class="cost">$49.9</div>
+        </div>
+        <!-- Another courses div -->
+        <div class="courses">
+          <img src="phyton.jpeg" alt="python image" />
+          <!-- details div -->
+          <div class="details">
+            <span>Updated 05/06/2023</span>
+            <h6>PYTHON Beginners Course</h6>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>(239)</span>
+            </div>
+          </div>
+          <div class="cost">$49.9</div>
+        </div>
+        <!-- Another courses div -->
+        <div class="courses">
+          <img src="C++.jpeg" alt="javascipt image" />
+          <!-- details div -->
+          <div class="details">
+            <span>Updated 05/06/2023</span>
+            <h6>C++ Beginners Course</h6>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>(239)</span>
+            </div>
+          </div>
+          <div class="cost">$49.9</div>
+        </div>
+        <!-- Another courses div -->
+        <div class="courses">
+          <img src="download (4).jpeg" alt="C# image" />
+          <!-- details div -->
+          <div class="details">
+            <span>Updated 05/06/2023</span>
+            <h6>C# Beginners Course</h6>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>(239)</span>
+            </div>
+          </div>
+          <div class="cost">$49.9</div>
+        </div>
+        <!-- Another courses div -->
+        <div class="courses">
+          <img src="java.jpeg" alt="java image" />
+          <!-- details div -->
+          <div class="details">
+            <span>Updated 05/06/2023</span>
+            <h6>Java Beginners Course</h6>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>(239)</span>
+            </div>
+          </div>
+          <div class="cost">$49.9</div>
+        </div>
+      </div>
+    </section>
+    <!-- Registration -->
+    <section id="registration">
+      <div class="reminder">
+        <p>Get 100 Online Courses for Free</p>
+        <h1>Register to get it</h1>
+        <div class="time">
+          <div class="date">
+            18 <br />
+            Days
+          </div>
+          <div class="date">
+            23 <br />
+            Hours
+          </div>
+          <div class="date">
+            06<br />
+            Minutes
+          </div>
+          <div class="date">
+            58 <br />
+            Seconds
+          </div>
+        </div>
+      </div>
+      <div class="form">
+        <form action="#" name="registration" method="get" novalidates>
+          <h3>Create Free Account NOW!</h3>
+          <input type="text" placeholder="Name" required name="name" />
+          <input
+            type="email"
+            placeholder="Email Address"
+            required
+            name="e-mail"
+          />
+          <input
+            type="number"
+            placeholder="Phone Number"
+            required
+            name="number"
+            maxlength="11"
+          />
+          <div class="btn">
+            <a href="#" class="yellow">Submit Form</a>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <!-- Profiles -->
+    <section id="experts">
+      <h1>Community Experts</h1>
+      <p>Replenish man have thing gathering lighs yielding shall you</p>
+      <div class="expert-box">
+        <div class="profiles">
+          <div class="image_container">
+            <img src="boy-cartoon-face-free-vector.jpg" alt="" />
+          </div>
+          <h6>Sheriff Baba</h6>
+          <p>Python & Algorithm Expert</p>
+          <div class="pro-links">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </div>
+        <div class="profiles">
+          <div class="image_container">
+            <img src="boy-face-avatar-cartoon-free-vector.jpg" alt="" />
+          </div>
+          <h6>Sheriff Baba</h6>
+          <p>C# & Algorithm Expert</p>
+          <div class="pro-links">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </div>
+        <div class="profiles">
+          <div class="image_container">
+            <img src="boy-cartoon-face-free-vector.jpg" alt="" />
+          </div>
+          <h6>Sheriff Baba</h6>
+          <p>C++ & Algorithm Expert</p>
+          <div class="pro-links">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </div>
+        <div class="profiles">
+          <div class="image_container">
+            <img src="boy-face-avatar-cartoon-free-vector.jpg" alt="" />
+          </div>
+          <h6>Sheriff Baba</h6>
+          <p>JavaScript & Algorithm Expert</p>
+          <div class="pro-links">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- footer -->
+    <section id="whole_footer">
+      <div id="footer">
+        <div class="footer-col">
+          <h3>Top Products</h3>
+          <li>Manage Reputation</li>
+          <li>Power Tools</li>
+          <li>Manage Website</li>
+          <li>Marketting Services</li>
+          <li>E-commerce Website</li>
+        </div>
+        <div class="footer-col">
+          <h3>Top Products</h3>
+          <li>Manage Reputation</li>
+          <li>Power Tools</li>
+          <li>Manage Website</li>
+          <li>Marketting Services</li>
+          <li>E-commerce Website</li>
+        </div>
+        <div class="footer-col">
+          <h3>Top Products</h3>
+          <li>Manage Reputation</li>
+          <li>Power Tools</li>
+          <li>Manage Website</li>
+          <li>Marketting Services</li>
+          <li>E-commerce Website</li>
+        </div>
+        <div class="footer-col">
+          <h3>Top Products</h3>
+          <li>Manage Reputation</li>
+          <li>Power Tools</li>
+          <li>Manage Website</li>
+          <li>Marketting Services</li>
+          <li>E-commerce Website</li>
+        </div>
+        <div class="footer-col">
+          <h3>NewsLetter</h3>
+          <p>You can trust us. we only send promo offers</p>
+          <div class="subscribe">
             <input
-              type="text"
-              id="display"
-              placeholder="0"
-              class="screen_color"
+              type="email"
+              name="subscribe"
+              placeholder="Your Email Address"
+              id=""
             />
-          </td>
-        </tr>
-        <tr>
-          <td colspan="4">
-            <input type="text" id="result" readonly />
-          </td>
-        </tr>
-        <tr>
-          <td><input type="button" value="C" id="clear" class="orange" /></td>
-          <td>
-            <input type="button" value="/" class="orange num" />
-          </td>
-          <td>
-            <input type="button" value="*" class="orange num" />
-          </td>
-          <td>
-            <button type="button" id="del" class="orange">
-              <i class="fas fa-backspace"></i>
-            </button>
-          </td>
-        </tr>
-        <tr>
-          <td><input type="button" value="7" class="brown num" /></td>
-          <td><input type="button" value="8" class="brown num" /></td>
-          <td><input type="button" value="9" class="brown num" /></td>
-          <td>
-            <input type="button" value="-" class="orange num" />
-          </td>
-        </tr>
-        <tr>
-          <td><input type="button" value="4" class="brown num" /></td>
-          <td><input type="button" value="5" class="brown num" /></td>
-          <td><input type="button" value="6" class="brown num" /></td>
-          <td><input type="button" value="+" class="orange num" /></td>
-        </tr>
-        <tr>
-          <td><input type="button" value="1" class="brown num" /></td>
-          <td><input type="button" value="2" class="brown num" /></td>
-          <td><input type="button" value="3" class="brown num" /></td>
-
-          <td><input type="button" value="%" class="brown num" /></td>
-        </tr>
-        <tr>
-          <td><input type="button" value="0" class="brown num" /></td>
-          <td><input type="button" value="00" class="brown num" /></td>
-          <td><input type="button" value="." class="brown num" /></td>
-          <td>
-            <input type="button" value="&equals;" id="equal" class="orange" />
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
+            <a href="#" class="yellow">SUBSCRIBE</a>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>
+          Copyright &copy;2023 All rights reserved | This template is made by
+          Sheriff Baba Tech Company
+        </p>
+        <div class="pro-links">
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin"></i>
+          <i class="fab fa-twitter"></i>
+        </div>
+      </div>
+    </section>
+    <!-- Jquery codes -->
     <script>
-      $(".num").click(function () {
-        $("#display").val($("#display").val() + this.value);
-        //$("#display").value = $("#display").value + this.value;
-        $("#result").val(eval($("#display").val()));
+      $("#menu_btn").click(function () {
+        $("nav .navigation ul").addClass("active");
       });
-      $("#equal").click(function () {
-        $("#display").val(eval($("#display").val()));
-        $("#result").val("");
+      $("#menu_close").click(function () {
+        $("nav .navigation ul").removeClass("active");
       });
-      $("#clear").click(function () {
-        $("#result").val("");
-        $("#display").val("");
-      });
-      const del = document.querySelector("#del");
-      const result = document.querySelector("#result");
-      const display = document.querySelector("#display");
-      del.onclick = () => {
-        display.value = display.value.slice(0, -1);
-        if (display.value != "") {
-          result.value = eval(display.value);
-        } else {
-          result.value = "";
-        }
-      };
     </script>
   </body>
 </html>
