--- a/mode.html
+++ b/mode.html
@@ -10,13 +10,14 @@
     />
     <meta name="keywords" content="DARK MODE, LIGHT MODE" />
     <meta name="author" name="sheriff baba" />
+    <meta http-equiv="content-type" content="text/html:charset-utf-8" />
     <link rel="stylesheet" href="mode.css" />
     <script src="mode.js"></script>
   </head>
   <body>
-    <div class="switch">
+    <label class="switch">
       <input type="checkbox" id="toggle" onclick="toggletheme()" />
-    </div>
+    </label>
     <section>
       <p>You can click the checkbox and toggle between light and dark mode</p>
     </section>
