--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="#">Courses</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <i class="fas fa-navicon" id="menu_btn"></i>
+        <i class="fas fa-bars" id="menu_btn"></i>
       </div>
     </nav>
     <!-- Section -->
