--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <nav>
       <div class="logo_container">
         <img src="logo3.png" alt="KnowledgeHub logo" />
-        <h3 id="hub1">knowledge</h3>
-        <h3 id="hub2">hub</h3>
+        <h3 id="hub1">knowledge hub</h3>
       </div>
       <div class="navigation">
         <ul>
