todo list codes added

--- a/nav.html
+++ b/nav.html
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="nav.css" />
+    <script src="jquery-3.6.1.min.js"></script>
   </head>
   <body>
     <nav>
@@ -90,14 +91,7 @@
         </li>
       </ul>
     </nav>
-    <div style="margin-left: 350px" class="anjasha">
-      <video width="320" height="190" controls>
-        <source src="anjasha.mp4" type="video/mp4" />
-      </video>
-      <a href="anjasha.mp4" download="anjasha kabara"
-        >Download your stuff here</a
-      >
-    </div>
+
     <!-- Javascript codes  -->
     <script>
       var ul_label1 = document.getElementById("menu1");
